# sadie-gtm

./: .dockerignore  .env.example  .gitignore  2026-01-25-this-session-is-being-continued-from-a-previous-co.txt  2026-02-18-013025-this-session-is-being-continued-from-a-previous-co.txt  2026-02-18-153242-implement-the-following-plan.txt  2026-02-18-153309-this-session-is-being-continued-from-a-previous-co.txt  2026-02-18-162236-implement-the-following-plan.txt  2026-02-18-162244-this-session-is-being-continued-from-a-previous-co.txt  2026-02-20-231424-this-session-is-being-continued-from-a-previous-co.txt  2026-02-20-233338-this-session-is-being-continued-from-a-previous-co.txt  Dockerfile.consumer  Dockerfile.deeplink  FL.xlsx  Miami_Beach.xlsx  README.md  README_LOCAL_DEV.md  Untitled  commands.md  conftest.py  create_heavy_queries.py  cursor_scraping_miami_with_region_workf.md  docker-compose.yml  enricher_progress.txt  export_florida_docs.sh  generate_queries.py  hotels_manual.csv  ipms247_all_slugs.txt  ipms247_archive_discovery_20260202.txt  ipms247_named_slugs.txt  ipms247_new_slugs.txt  ipms247_slugs.txt  ipms247_urls.txt  ipms247_urls_clean.txt  ipms247_urls_deduped.txt  ipms247_urls_final.txt  main.py  optimize_queries.py  presentation_palm_beach_analysis.md  pyproject.toml  (+26 more)
.claude/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
context/: AGENT_GUIDE.md  CODING_GUIDE.md  DAILY_STATUS.md  PLAN_enrichment_to_launch.md  PLAN_fix_remaining_garbage_names.md  PRESENTATION_NOTES.md  SCHEMA.md  TASK.md  booking_engine_api_data.md  florida_metro_boxes.geojson  grid_scraper_adaptive.md  pipeline-optimization.md  prompt.md
db/: README_MIGRATIONS.md  __init__.py  client.py  ingest.py  queries.sql  schema.sql  seed.sql
docs/: architecture.md  schema.md
infra/: __init__.py  cloudbeds-enrichment.service  deeplink.tf  fargate.tf  rms-enrichment.service  s3.py  slack.py  sqs.py  terraform.tfvars
lib/: browser.py  browser_test.py  proxy.py
messages/: __init__.py  base.py  handlers.py  scrape.py
scripts/: _audit_big4_dm.py  add_constraint.py  bulk_insert_crawl.py  cleanup_bad_data.py  cleanup_garbage_data.py  crawl_big4_parks.py  crawl_entity_websites.py  deploy_all.sh  deploy_ec2.py  deploy_fargate.sh  ec2_setup.sh  ec2_status.sh  enrich_abn.py  enrich_maryland_coords.py  fargate_quick_deploy.sh  fix_bookonlinenow.py  fix_html_entities.py  fix_mews_urls.py  fix_rms_online_bookings.py  ingest_detector_output.py  insert_big4_crawl_results.py  normalize_locations.py  scrape_big4.py  sync_reports.sh  update_ec2.sh  update_ssh_aliases.sh  zero_to_hero.py
sources/: __init__.py  (+11 more)
(+425 files in other folders)
