[project]
name = "sadie-gtm"
version = "0.1.0"
description = "Hotel lead generation pipeline"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "openpyxl>=3.1.0",
    "asyncpg>=0.31.0",
    "aiosql>=13.4",
    "pydantic>=2.12.5",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
dev-dependencies = []

[dependency-groups]
dev = [
    "migra[pg]>=3.0.1663481299",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["services", "repositories"]
python_files = "*_test.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
